# api-rest-test

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  main.cpp.txt
.devcontainer/: Dockerfile  devcontainer.json
static/: index.html  script.js  style.css
tools/: embedfile.c
